fonts and icons offline + gallery almost fixed
gallery: sometimes overflows on y axis + I broke map container always overflows on y axis; sometimes the images are stretched like a lot so TODO fix that

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -35,8 +35,8 @@
     justify-items: center;
 }
 
-.text-besides-the-map > a {
-    position: relative;
+.text-besides-the-map > p {
+    margin: 1em 0;
 }
 
 
