--- a/styles/map.css
+++ b/styles/map.css
@@ -31,14 +31,11 @@
 
 #zoom {
     position: relative;
-    margin: 1rem 1rem 1rem 1rem;
-    margin-bottom: max(auto, 1rem);
+    margin: auto 1rem;
     display: flex;
     flex-direction: row;
     background-color: var(--complementary);
     border-radius: 15px;
-    max-height: 100%;
-    min-height: 0;
     padding: 1rem;
 }
 
